cargo-dist/templates/ci/vendor/rust-cache/tests/tests/trybuild/fail_to_compile.stderr
error[E0599]: no method named `foobar` found for reference `&'static str` in the current scope
 --> tests/trybuild/fail_to_compile.rs:2:14
  |
2 |     "foobar".foobar();
  |              ^^^^^^ method not found in `&str`
